Offer wipe option for session
